--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5.6.9",
     "hardhat": "2.10.2",
-    "hardhat-abi-exporter": "^y2.10.0",
+    "hardhat-abi-exporter": "^2.10.0",
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "0.11.11",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
